swagger UI for auth
