# Routes/swagger.json
@@ -12,8 +12,8 @@
       "name": "MIT"
     }
   },
-  "host": "petstore.swagger.io",
-  "basePath": "/api",
+  "host": "memorybank-staging.herokuapp.com/",
+  "basePath": "/",
   "schemes": [
     "http"
   ],
@@ -24,144 +24,127 @@
     "application/json"
   ],
   "paths": {
-    "/pets": {
+    "/auth/user": {
       "get": {
-        "description": "Returns all pets from the system that the user has access to",
+        "description": "Returns information about logged in user, requires a token",
         "operationId": "findPets",
-        "produces": [
-          "application/json",
-          "application/xml",
-          "text/xml",
-          "text/html"
-        ],
-        "parameters": [
-          {
-            "name": "tags",
-            "in": "query",
-            "description": "tags to filter by",
-            "required": false,
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "collectionFormat": "csv"
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "description": "maximum number of results to return",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "pet response",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Pet"
-              }
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/ErrorModel"
-            }
-          }
-        }
-      },
-      "post": {
-        "description": "Creates a new pet in the store.  Duplicates are allowed",
-        "operationId": "addPet",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "pet",
-            "in": "body",
-            "description": "Pet to add to the store",
+            "name": "authorization",
+            "in": "header",
+            "description": "JWT token",
             "required": true,
-            "schema": {
-              "$ref": "#/definitions/NewPet"
-            }
+            "type": "string",
           }
         ],
         "responses": {
           "200": {
-            "description": "pet response",
+            "description": "user information",
             "schema": {
-              "$ref": "#/definitions/Pet"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/ErrorModel"
-            }
-          }
-        }
-      }
-    },
-    "/pets/{id}": {
-      "get": {
-        "description": "Returns a user based on a single ID, if the user does not have access to the pet",
-        "operationId": "findPetById",
-        "produces": [
-          "application/json",
-          "application/xml",
-          "text/xml",
-          "text/html"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of pet to fetch",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "pet response",
-            "schema": {
-              "$ref": "#/definitions/Pet"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/ErrorModel"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/User"
+              }
             }
           }
         }
       },
       "delete": {
-        "description": "deletes a single pet based on the ID supplied",
-        "operationId": "deletePet",
+        "description": "Deletes user",
+        "operationId": "deleteUser",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "description": "ID of pet to delete",
+            "name": "authorization",
+            "in": "header",
+            "description": "JWT token",
             "required": true,
-            "type": "integer",
-            "format": "int64"
+            "type": "string",
           }
         ],
         "responses": {
-          "204": {
-            "description": "pet deleted"
-          },
-          "default": {
-            "description": "unexpected error",
+          "200": {
+            "description": "delete response",
             "schema": {
-              "$ref": "#/definitions/ErrorModel"
+              "$ref": "#/definitions/Message"
+            }
+          }
+        }
+      }
+    },
+    "/auth/signin": {
+      "post": {
+        "description": "Sign in to users account",
+        "operationId": "signIn",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "body",
+            "description": "user's email address",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "body",
+            "description": "user's password",
+            "required": true,
+            "type": "string"
+          },
+        ],
+        "responses": {
+          "200": {
+            "description": "JWT token",
+            "schema": {
+              "$ref": "#/definitions/Token"
+            }
+          }
+        }
+      }
+    },
+    "/auth/signup": {
+      "post": {
+        "description": "Sign user up",
+        "operationId": "signUp",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "body",
+            "description": "user's email address",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "displayName",
+            "in": "body",
+            "description": "user's email address",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "body",
+            "description": "user's password",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "JWT token",
+            "schema": {
+              "$ref": "#/definitions/Message"
             }
           }
         }
@@ -169,54 +152,49 @@
     }
   },
   "definitions": {
-    "Pet": {
-      "type": "object",
-      "allOf": [
-        {
-          "$ref": "#/definitions/NewPet"
-        },
-        {
-          "required": [
-            "id"
-          ],
-          "properties": {
-            "id": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        }
-      ]
-    },
-    "NewPet": {
+    "User": {
       "type": "object",
       "required": [
         "name"
       ],
       "properties": {
-        "name": {
-          "type": "string"
-        },
-        "tag": {
-          "type": "string"
+        "user": {
+          "type": "object",
+          "required": [
+            "name"
+          ],
+          "properties": {
+            "email": {
+              "type": "string"
+            },
+            "displayName": {
+              "type": "string"
+            }
+          }
         }
       }
     },
-    "ErrorModel": {
+    "Message": {
       "type": "object",
       "required": [
-        "code",
         "message"
       ],
       "properties": {
-        "code": {
-          "type": "integer",
-          "format": "int32"
-        },
         "message": {
           "type": "string"
         }
       }
-    }
+    },
+    "Token": {
+      "type": "object",
+      "required": [
+        "token"
+      ],
+      "properties": {
+        "token": {
+          "type": "string"
+        }
+      }
+    },
   }
 }
